--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "groq-sdk": "^0.36.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^6.9.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
